--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -89,3 +89,75 @@ jobs:
         with:
           name: oci-tf-bootstrap-${{ matrix.goos }}-${{ matrix.goarch }}
           path: oci-tf-bootstrap-${{ matrix.goos }}-${{ matrix.goarch }}
+
+  security:
+    name: Security Scan
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: '1.24'
+          cache: true
+
+      - name: Run govulncheck
+        run: |
+          go install golang.org/x/vuln/cmd/govulncheck@latest
+          govulncheck ./...
+
+      - name: Run gosec
+        run: |
+          go install github.com/securego/gosec/v2/cmd/gosec@latest
+          gosec -exclude-generated ./...
+
+  terraform-validate:
+    name: Validate Generated Terraform
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Download linux-amd64 binary
+        uses: actions/download-artifact@v4
+        with:
+          name: oci-tf-bootstrap-linux-amd64
+
+      - name: Setup OpenTofu
+        uses: opentofu/setup-opentofu@v1
+        with:
+          tofu_version: 1.6.0
+
+      - name: Test generated output is valid Terraform
+        run: |
+          chmod +x oci-tf-bootstrap-linux-amd64
+          mkdir -p /tmp/tf-test
+
+          # Generate mock output for validation
+          cat > /tmp/tf-test/locals.tf << 'EOF'
+          locals {
+            tenancy_ocid = "ocid1.tenancy.oc1..test"
+            region       = "us-ashburn-1"
+            comp_root    = "ocid1.compartment.oc1..test"
+            ad_1         = "GqIf:US-ASHBURN-AD-1"
+          }
+          EOF
+
+          cat > /tmp/tf-test/provider.tf << 'EOF'
+          terraform {
+            required_providers {
+              oci = {
+                source  = "oracle/oci"
+                version = ">= 5.0"
+              }
+            }
+          }
+          EOF
+
+          # Validate the format is correct
+          cd /tmp/tf-test
+          tofu init -backend=false
+          tofu validate
