build: use go-version-file and add Renovate for Go toolchain management

--- a/renovate.json
+++ b/renovate.json
@@ -5,6 +5,9 @@
     "schedule:weekly",
     ":semanticCommits"
   ],
+  "golang": {
+    "enabled": true
+  },
   "platformAutomerge": true,
   "packageRules": [
     {
